# libredcarpet

./: .cvsignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  README  README-ugid  acconfig.h  autogen.sh  build-buddy.conf  configure.in  libredcarpet.pc.in  rpm-4.0.x.supp
bindings/: Makefile.am
bindings/mono/: .cvsignore  AssemblyInfo.cs  ChangeLog  Channel.custom  Debug.custom  Distro.custom  Extract.custom  Global.custom  Makefile.am  Package.custom  PackageDep.custom  PackageDepArray.custom  PackageMatch.custom  PackageSpec.cs  PackageSpec.custom  PackageUpdate.custom  Packman.custom  QueryPart.cs  RC.metadata  RC.symbols  README  Rollback.custom  ServiceMountException.cs  World.custom  WorldMulti.custom  WorldService.custom  WorldStore.custom  libredcarpet-api.xml  libredcarpet-sharp-docs.source  libredcarpet-sharp.pc.in  libredcarpet-sharp.snk  libredcarpet-sources.xml
bindings/mono/en/GtkSharp.LibredcarpetSharp/: ObjectManager.xml
bindings/mono/en/RC/: Arch.xml  Buffer.xml  Channel.xml  ChannelAndSubdFn.xml  ChannelFn.xml  ChannelType.xml  Debman.xml  Debug.xml  DebugFn.xml  DebugLevel.xml  DepOr.xml  Distro.xml  DistroPackageType.xml  DistroStatus.xml  Extract.xml  GPGKey.xml  Global.xml  Gpg.xml  Hash.xml  LineBuf.xml  LineBufStatus.xml  MarkedPackageFn.xml  MarkedPackagePairFn.xml  Memory.xml  Package.xml  PackageAndDepFn.xml  PackageAndSpecFn.xml  PackageDep.xml  PackageDepArray.xml  PackageFile.xml  PackageFn.xml  PackageImportance.xml  PackageMatch.xml  PackageMatchFn.xml  PackagePairFn.xml  PackageRelation.xml  PackageSAXContext.xml  PackageSection.xml  PackageSpec.xml  PackageStatus.xml  (+78 more)
bindings/mono/glue/: Makefile.am  generated.c
bindings/python/: ChangeLog  Makefile.am  channel.c  channel.h  distro.c  distro.h  package-dep.c  package-dep.h  package-file.c  package-file.h  package-importance.c  package-importance.h  package-match.c  package-match.h  package-spec.c  package-spec.h  package-update.c  package-update.h  package.c  package.h  packman.c  packman.h  pkg_to_xml.py  pyutil.c  pyutil.h  redcarpet.c  redcarpet.py  resolver-context.c  resolver-context.h  resolver-info.c  resolver-info.h  resolver-queue.c  resolver-queue.h  resolver.c  resolver.h  setup.py  verification.c  verification.h  world-store.c  world-store.h  (+2 more)
dependency-tests/: .cvsignore  ChangeLog  Makefile.am  deptestomatic.c  run-tests.sh
dependency-tests/basic-exercises/: .cvsignore  exercise-1-test.solution  exercise-10-test.solution  exercise-11-test.solution  exercise-13-test.solution  exercise-14-test.solution  exercise-15-test.solution  exercise-16-test.solution  exercise-17-test.solution  exercise-18-test.solution  exercise-19-test.solution  exercise-2-test.solution  exercise-20-test.solution  exercise-21-test.solution  exercise-21-test.xml  exercise-25-test.solution  exercise-26-test.solution  exercise-27-test.solution  exercise-28-packages.xml  exercise-28-test.solution  exercise-28-test.xml  exercise-29-test.solution  exercise-3-test.solution  exercise-30-test.solution  exercise-31-test.solution  exercise-32-packages.xml  exercise-32-test.solution  exercise-33-test.solution  exercise-33-test.xml  exercise-34-test.solution  exercise-35-test.solution  exercise-37-test.solution  exercise-39-test.solution  exercise-4-test.solution  exercise-41-test.xml  exercise-42-test.solution  exercise-43-test.solution  exercise-43-test.xml  exercise-44-system.xml  exercise-45-test.solution  (+24 more)
dependency-tests/dump-tests/: bad-deps-test.xml  evo-solvedeps-test.xml  nautilus-upgrade-test.xml  verify-test.xml  woody-evolution-install-test.xml
doc/: .cvsignore  Makefile.am  libredcarpet.sgml  libredcarpet.types
src/: .cvsignore  ChangeLog  Makefile.am  distributions.xml  libredcarpet.h  make_stub.sh  packer.pl  rc-arch.c  rc-arch.h  rc-channel-private.c  rc-channel-private.h  rc-channel.c  rc-channel.h  rc-debman-general.c  rc-debman-general.h  rc-debman-private.h  rc-debman.c  rc-debman.h  rc-debug.c  rc-debug.h  rc-dep-or.c  rc-dep-or.h  rc-distman.c  rc-distman.h  rc-distro.c  rc-distro.h  rc-dpkg-helper.c  rc-extract-channels.c  rc-extract-channels.h  rc-extract-packages.c  rc-extract-packages.h  rc-line-buf-private.h  rc-line-buf.c  rc-line-buf.h  rc-marshal.list  rc-md5-private.h  rc-md5.c  rc-md5.h  rc-package-dep.c  rc-package-dep.h  (+78 more)
tools/: .cvsignore  ChangeLog  Makefile.am  cur_to_xml.c  dep_lint.c  packman_test.c  pkg-vercmp  pkg-vercmp.c  pkg_to_xml.c
